# RustWebDevelopment

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  add_questions.sh  compose.yaml  exCargo.toml  index.html
Week1/A/helloweb/src/: main.rs
assets/: index.html  questionbase.json
assets/static/: 404.html
assets/templates/: 404.html  arbitrary.html  index.html
generate-random-number/: Cargo.toml
generate-random-number/src/: main.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
inclass/Week1/A/helloweb/src/: main.rs
migrations/: 20240528190905_example_question.down.sql  20240528190905_example_question.up.sql
questions/: easy-riddle.json  how-to.json  mid-riddle.json  poetic-riddle.json  shyguy.json  tea.json
src/: api.rs  main.rs  question.rs  questionbase.rs  web.rs
templates/: index.html
webhello/src/: main.rs
